Gemini 2.0 API Key integration

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,4 +1,6 @@
-project_id: speech-agent-439509
-credentials_json: ./credentials/key.json
-region: us-central1
-model_name: gemini-1.5-pro-002
+# project_id: speech-agent-439509
+# credentials_json: ./credentials/key.json
+# region: us-central1
+# model_name: gemini-1.5-pro-002
+gemini_api_key: AIzaSyAtSEMeOuaVQDWE6D7xR05aU8AqsZE_ZL0
+model_name: gemini-2.0-pro-exp-02-05
